[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscf-ext-ccsd"
version = "0.1.0"
description = "Extensions to PySCF's CCSD implementation"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }  # または適切なライセンスに変更
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pyscf",
]

[tool.setuptools.packages.find]
where = ["python"]
